# colibri_demo

./: README.md
colibri_demo_camera/: CMakeLists.txt
colibri_demo_camera/include/: dht11.h  sender.h
colibri_demo_camera/src/: dht11.cpp  main.cpp  sender.cpp
colibri_demo_server/: CMakeLists.txt
colibri_demo_server/include/: dht11.h
colibri_demo_server/src/: main.cpp
